// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable > CardTable.vue renders OXD CardTable > CardTable 1`] = `
<div class="oxd-table" role="table">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>
`;

exports[`CardTable > CardTable.vue should renders OXD CardTable > CardTable with card decorator 1`] = `
<div class="oxd-table" role="table" rowdecorator="oxd-table-decorator-card">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>
`;

exports[`CardTable > CardTable.vue should renders OXD CardTable > CardTable with selector config 1`] = `
<div class="oxd-table" role="table" rowdecorator="oxd-table-decorator-card">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>
`;

exports[`CardTable > CardTable.vue should renders OXD CardTable > CardTable without selectable 1`] = `
<div class="oxd-table" role="table">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class="oxd-table-body oxd-card-table-body" role="rowgroup">
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="oxd-table-card --loaded --mobile">
      <div class="oxd-table-row oxd-table-row--with-border oxd-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 1;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="oxd-table-cell oxd-padding-cell" role="cell" style="flex: 5;">
              <div class="oxd-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>
`;
